compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__type_holes1.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1358
expression: "type A { A(_) };"

---
error: Unexpected type hole
  ┌─ /src/one/two.gleam:1:12
  │
1 │ type A { A(_) };
  │            ^ I need to know what this is

We need to know the exact type here so type holes cannot be used.

